# chb-mit-scalp-eeg

./: .gitignore  CLAUDE.md  README.md  all_summary_data.json  nomenclature.md  nomenclature.txt  pyproject.toml  read_summary.py  requirements.txt  run_jupyter.sh
analysis/: eda.ipynb  feature_extraction.ipynb  feature_selection.ipynb
extraction/: LT.py  logger.py  parse_summaries.py  pipeline.py  tools.py
models/: NN.ipynb  SVM.ipynb  svm.py
pipelines/: eda.ipynb
